--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
+    "medusa-file-minio": "^1.3.1",
     "medusa-react": "^9.0.0",
-    "next": "^14.0.0",
+    "next": "^14.2.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
